2009-10-05  Dan Nicolaescu  <dann@ics.uci.edu>

	* log-view.el (log-view-diff): Use vc-diff-internal instead of
	vc-version-diff.
	(vc-diff-internal): Autoload this instead of vc-version-diff.

2009-10-05  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (eval-expression): Doc fix.

	* progmodes/cwarn.el (cwarn-mode): Doc fix.

2009-10-05  Michael Albinus  <michael.albinus@gmx.de>

	* files.el (directory-files-no-dot-files-regexp): New defconst.
	(delete-directory): Use it.
	(copy-directory): Use it.  Remove parameter PRESERVE-UID-GID.

	* net/tramp.el (tramp-verbose): Fix docstring.
	(tramp-methods): Add recursive option to `tramp-copy-args'.  Add
	`tramp-copy-recursive'.  Valid for "rcp", "scp", "scp1", "scp2",
	"scp1_old", "scp2_old", "rsync", "rsyncc".
	(tramp-default-method): Check also for
	`auth-source-user-or-password'.
	(tramp-file-name-handler-alist, tramp-file-name-for-operation):
	Add handler for `copy-directory'.
	(tramp-handle-copy-directory): New defun.
	(tramp-do-copy-or-rename-file-out-of-band): Handle directory case.
	(tramp-handle-start-file-process): Raise an error when PROGRAM is
	nil.  Optimize sent command.

2009-10-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	* calendar/diary-lib.el (diary-show-all-entries): Re-fit the calendar
	window if necessary.

	* calendar/calendar.el (calendar-basic-setup): Don't call
	switch-to-buffer in a dedicated window.

2009-10-05  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el (bookmark-handle-bookmark): If bookmark has no file,
	  don't do anything related to relocating, just return nil.
	(bookmark-error-no-filename): New error.
	(bookmark-default-handler): Signal `bookmark-error-no-filename' if
	  bookmark has no file.  Don't even attempt to handle things that
	  are not files; the whole point of custom handlers is to keep that
	  knowledge elsewhere anyway.  Tighten some comments.
	(bookmark-file-or-variation-thereof): Remove now-unused function.
	(bookmark-location): Doc string fix.
	(Bug#4250)
